@startuml

title __PROXY's Class Diagram__\n

  namespace ethanmmd.mastermind {
    namespace distributed {
      namespace proxy {
        class ethanmmd.mastermind.distributed.proxy.LogicProxy {
            + LogicProxy()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace distributed {
      namespace proxy {
        class ethanmmd.mastermind.distributed.proxy.ProposalControllerProxy {
            + ProposalControllerProxy()
            + addProposedCombination()
            + getAttempts()
            + getProposedCombination()
            + getResult()
            + isLooser()
            + isWinner()
            + next()
            + redo()
            + redoable()
            + undo()
            + undoable()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace distributed {
      namespace proxy {
        class ethanmmd.mastermind.distributed.proxy.ResumeControllerProxy {
            + ResumeControllerProxy()
            + resume()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace distributed {
      namespace proxy {
        class ethanmmd.mastermind.distributed.proxy.SessionProxy {
            + SessionProxy()
            + getGameStatus()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace distributed {
      namespace proxy {
        class ethanmmd.mastermind.distributed.proxy.StartControllerProxy {
            + StartControllerProxy()
            + start()
        }
      }
    }
  }
  

  ethanmmd.mastermind.distributed.proxy.LogicProxy -up-|> ethanmmd.mastermind.controllers.Logic
  ethanmmd.mastermind.distributed.proxy.LogicProxy o-- ethanmmd.mastermind.distributed.TCPIP : tcpip
  ethanmmd.mastermind.distributed.proxy.ProposalControllerProxy -up-|> ethanmmd.mastermind.controllers.ProposalController
  ethanmmd.mastermind.distributed.proxy.ProposalControllerProxy o-- ethanmmd.mastermind.distributed.TCPIP : tcpip
  ethanmmd.mastermind.distributed.proxy.ResumeControllerProxy -up-|> ethanmmd.mastermind.controllers.ResumeController
  ethanmmd.mastermind.distributed.proxy.ResumeControllerProxy o-- ethanmmd.mastermind.distributed.TCPIP : tcpip
  ethanmmd.mastermind.distributed.proxy.SessionProxy .up.|> ethanmmd.mastermind.models.Session
  ethanmmd.mastermind.distributed.proxy.SessionProxy o-- ethanmmd.mastermind.distributed.TCPIP : tcpip
  ethanmmd.mastermind.distributed.proxy.StartControllerProxy -up-|> ethanmmd.mastermind.controllers.StartController
  ethanmmd.mastermind.distributed.proxy.StartControllerProxy o-- ethanmmd.mastermind.distributed.TCPIP : tcpip


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
